add en josn file

--- a/apps/fast-metro/app/src/data/langs/en.json
+++ b/apps/fast-metro/app/src/data/langs/en.json
@@ -81,5 +81,146 @@
       "subtitle": "Are you lost?",
       "content": "You found our error page 404. This is not your fault. It is just a little bit mistakes. But don't worry, you can go back right now!"
     }
+  },
+  "start-trip": {
+    "title": "start trip",
+    "from-to": {
+      "from": "From",
+      "from-holder": "select station",
+      "to": "To",
+      "to-holder": "select station"
+    },
+    "stations-number": "Number of stations {{number}}",
+    "ticket-price": "Ticket Price : {{number}} LE",
+    "elderly": "For Elderly : {{number}} LE"
+  },
+  "metro-schedules": {
+    "title": "Metro Schedules",
+    "collapse-data": {
+      "header": {
+        "title": "Line 1",
+        "subtitle": "Total Time : {{time}} Min",
+        "right-subtitle": "{{name}} - {{name}}"
+      },
+      "body": {
+        "first-transfer": {
+          "title": "First Transfer",
+          "subtitle": "Starts from {{time}} AM"
+        },
+        "last-transfer": {
+          "title": "Last Transfer",
+          "subtitle": "Ends at {{time}} AM"
+        },
+        "time-between-stations-peek-time": {
+          "title": "Time between station (Peek time)",
+          "subtitle": "{{time}}{{timebysec}}"
+        },
+        "time-between-stations-non-peek-time": {
+          "title": "Time between station (Non-Peek time)",
+          "subtitle": "{{time}}{{timebysec}}"
+        },
+        "number-trains": {
+          "title": "Number Trains",
+          "regular-ventilation": {
+            "title": "Regular Ventilation",
+            "number": "{{number}}"
+          },
+          "air-conditioned": {
+            "title": "Air Conditioned",
+            "number": "{{number}}"
+          }
+        }
+      }
+    }
+  },
+  "get-started": {
+    "text": "{{content}}"
+  },
+  "closet-transit": {
+    "title": "Closet Transit",
+    "from-to": {
+      "from": "From",
+      "from-holder": "select station"
+    },
+    "stations-number": "Number of stations {{number}}",
+    "ticket-price": "Ticket Price : {{number}} LE",
+    "elderly": "For Elderly : {{number}} LE"
+  },
+  "contact-us": {
+    "title": "Contact us",
+    "app-name": "Metro App",
+    "email": "info@toctive.com",
+    "contact-form": {
+      "name-holder": "Your Name",
+      "email-holder": "example@mail.com",
+      "massage-holder": "I want to"
+    }
+  },
+  "contact-metro": {
+    "metro-name": "Cairo Metro",
+    "title": "Contact Metro",
+    "email": "metro@cairo.gov.eg",
+    "metro-number": "+2 012 345 678 90"
+  },
+  "station-services": {
+    "title": "Station Services",
+    "services-by-station": "Services by Station",
+    "Search-for-Services": "Search for Services"
+  },
+  "transit-stations": {
+    "title": {
+      "title": " Transit Stations",
+      "transit-one": {
+        "title": "{{transitOne}}",
+        "subtitle": "{{Line}} - {{Line}}"
+      },
+      "transit-two": {
+        "title": "{{transitTwo}}",
+        "subtitle": "{{Line}} - {{Line}}"
+      },
+      "transit-three": {
+        "title": "{{transitThree}}",
+        "subtitle": "{{Line}} - {{Line}}"
+      },
+      "transit-four": {
+        "title": "{{transitFour}}",
+        "subtitle": "{{Line}} - {{Line}}"
+      }
+    }
+  },
+  "safety-instructions": {
+    "title": "Safety Instructions",
+    "do": {
+      "title": "Do",
+      "subtitle": "What should you do on Metro",
+      "content": {
+        "1": "Follow the signs and pay attention to hear notices and alerts from public address.",
+        "2": "Take care and assisting the elderly, women, children and people with special needs (allowing them to pass first through the ticket gates, escalators, elevators, entering in the train and giving them priority to sit).",
+        "3": " Keep the stations and the trains clean and throwing trash into rubbish bins.",
+        "4": " In case of suspicion of anything at the station or train, please call the officials",
+        "5": "Notify the station official of any observations, whether in the station or in the train.",
+        "6": " Using safety and emergency equipment (fire extinguishers or emergency buttons inside the train) only in emergency in order to not be subjected to legal accountability",
+        "7": " Use the ticket or contactless card during crossing the ticket gates.",
+        "8": "Calling the officials when you face any faults in ticket gates",
+        "9": "When using escalators please hold the handrail and stand on the ladder in the direction of going up or down.",
+        "10": " Stand behind the yellow line while waiting the train on the platform.",
+        "11": "Allow passengers to get off first from the train and then enter.",
+        "12": "Stay away from the doors after getting in the train"
+      }
+    },
+    "dont": {
+      "title": "Don't",
+      "subtitle": "What should you Not do on Metro",
+      "content":{
+        "1":"Smoking inside the metro.",
+        "2":"Carrying flammable or dangerous chemicals.",
+        "3":"Taking the animals within the metro.",
+        "4":"Tampering or trying to sabotage the station or train or ticket gates in order to not expose yourself to legal accountability.",
+        "5":"Jumping over ticket gates to cross in order to not expose yourself to fine.",
+        "6":"Crossing by force or in groups the ticket gates.",
+        "7":"Running, sitting or playing while going upstairs or downstairs on escalators.","8":"Allowing children to use escalators alone.","9":"Scrambling, playing or running on the train platform.",
+        "10":"Crossing the rails to pick up property that falls on the train track, immediately go to the station officials for help.","11":"Opening or closing the train door with your hand.","12":"entering the train after starting the door closing alert.","13":"Sitting on the train floor."
+      }
+    }
   }
-}
+}  
