finshed en ar json files

--- a/apps/fast-metro/app/src/data/langs/ar.json
+++ b/apps/fast-metro/app/src/data/langs/ar.json
@@ -71,5 +71,207 @@
       "title": "عنا",
       "subtitle": "موقعنا وصفحات الميديا الخاصة بنا"
     }
+  },
+  "map-screen": {
+    "title": "الخريطة"
+  },
+  "error-screen": {
+    "not-found-screen": {
+      "title": "هذة الصفحة غير موجودة",
+      "subtitle": "لا تعرف أين تذهب?",
+      "content": "ظهور صفحة 404. ليس خطأك. انه خطأ صغير. ولكن لا تقلق, يمكنك العودة الأن!"
+    }
+  },
+  "start-trip": {
+    "title": "أبدأ الرحلة",
+    "from-to": {
+      "from": "من",
+      "from-holder": "أختار المحطة",
+      "to": "ألي",
+      "to-holder": "أختار المحطة"
+    },
+    "stations-number": "عدد المحطات {{number}}",
+    "ticket-price": "سعر التذكرة : {{number}} جنية",
+    "elderly": "كبار السن : {{number}} جنية"
+  },
+  "metro-schedules": {
+    "title": "مواعيد المترو",
+    "collapse-data": {
+      "header": {
+        "title": "{{choseLine}}",
+        "subtitle": "الوقت الكلي : {{time}} دقيقة",
+        "right-subtitle": "{{name}} - {{name}}"
+      },
+      "body": {
+        "first-transfer": {
+          "title": "الرحلة الاولي",
+          "subtitle": "تبدأ من {{time}} صباحاً"
+        },
+        "last-transfer": {
+          "title": "الرحلة الاخيرة",
+          "subtitle": "تنتهي في  {{time}} صباحاً"
+        },
+        "time-between-stations-peek-time": {
+          "title": "الوقت بين المحطات(وقت الذروة)",
+          "subtitle": "{{time}}{{timebysec}}"
+        },
+        "time-between-stations-non-peek-time": {
+          "title": "الوقت بين المحطات(غير وقت الذروة)",
+          "subtitle": "{{time}}{{timebysec}}"
+        },
+        "number-trains": {
+          "title": "عدد القطارات",
+          "regular-ventilation": {
+            "title": "التهوية العادية",
+            "number": "{{number}}"
+          },
+          "air-conditioned": {
+            "title": "مكيف الهواء",
+            "number": "{{number}}"
+          }
+        }
+      }
+    }
+  },
+  "get-started": {
+    "slide-one": "{{content}}",
+    "slide-two": "{{content}}",
+    "slide-three": "{{content}}"
+  },
+  "closet-transit": {
+    "title": "اقرب محطة تبادلية",
+    "from-to": {
+      "from": "من",
+      "from-holder": "أختار المحطة"
+    },
+    "stations-number": "عدد المحطات {{number}}",
+    "ticket-price": "سعر التذكرة : {{number}} جنية",
+    "elderly": "كبار السن : {{number}} جنية"
+  },
+  "contact-us": {
+    "title": "تواصل معنا",
+    "app-name": "Metro App",
+    "email": "info@toctive.com",
+    "contact-form": {
+      "name-holder": "أسمك",
+      "email-holder": "example@mail.com",
+      "massage-holder": "أريد ان"
+    }
+  },
+  "contact-metro": {
+    "metro-name": "Cairo Metro",
+    "title": "Contact Metro",
+    "email": "metro@cairo.gov.eg",
+    "metro-number": "+2 012 345 678 90"
+  },
+  "station-services": {
+    "title": "خدمات المحطات",
+    "services-by-station": "أبحث بواسطة المحطة",
+    "Search-for-Services": "أبحث بواسطةالخدمة"
+  },
+  "transit-stations": {
+    "title": {
+      "title": " المحطات التبادلية",
+      "transit-one": {
+        "title": "{{transitOne}}",
+        "subtitle": "{{Line1}} - {{Line2}}"
+      },
+      "transit-two": {
+        "title": "{{transitTwo}}",
+        "subtitle": "{{Line1}} - {{Line2}}"
+      },
+      "transit-three": {
+        "title": "{{transitThree}}",
+        "subtitle": "{{Line1}} - {{Line2}}"
+      },
+      "transit-four": {
+        "title": "{{transitFour}}",
+        "subtitle": "{{Line1}} - {{Line2}}"
+      }
+    }
+  },
+  "safety-instructions": {
+    "title": "Safety Instructions",
+    "do": {
+      "title": "Do",
+      "subtitle": "ما الذي يجب فعله في المترو",
+      "content": [
+        "إتباع اللوحات الإرشادية والإهتمام بسماع إشعارات وتنبيهات الإذاعة الداخليه.",
+         "مراعاة ومساعدة كبارالسن والنساء والأطفال وذوى الإحتياجات الخاصه (السماح لهم بالمرور أولاً من بوابات التذاكر والسلالم المتحركه والمصاعد وركوب القطار وإعطاء الأولويه لهم بالجلوس ).",
+         "الحفاظ على نظافه المحطات والقطارات وإلقاء المهملات بصناديق القمامه.",
+         "فى حالة الإشتباه فى أى شئ مريب بالمحطه أو القطار يرجى التوجه إلى المسؤلين",
+         "إبلاغ مسئول المحطة عن أى ملاحظات سواء بالمحطه أو القطار.",
+         "إستخدام معدات السلامة والطوارئ ( طفايات الحريق أو بلوف الطوارئ بالقطار) فقط فى الحالات الطارئة حتى لا تتعرض للمسائلة القانونية .",
+         "إستخدم التذكرة أو الكارت الذكى للعبور من بوابات التذاكر.",
+         "اللجوء لمسئول بوابات التذاكر عند حدوث خلل فى وسيلة العبور .",
+         "عند إستخدام السلالم المتحركه يرجى إمساك الدرابزين والوقوف على السلم فى إتجاه الصعود أو النزول .",
+         "عند إنتظار القطار على الرصيف يرجى الوقوف خلف الخط الأصفر .",
+         "السماح للركاب بالنزول أولاً من القطارثم الصعود .",
+         "الإبتعاد عن الأبواب بعد الصعود للقطار."
+         ]
+    },
+    "dont": {
+      "title": "Don't",
+      "subtitle": "What should you Not do on Metro",
+      "content": [
+        "التدخين داخل المترو.",
+        "حمل مواد قابلة للإشتعال أو مواد كيميائية خطره.",
+        "إصطحاب الحيوانات .",
+        "العبث أو محاولة التخريب بالمحطه أو القطار أو بوابات التذاكر حتى لا تعرض نفسك للمسائلة القانونية .",
+        "القفز فوق بوابات التذاكر للعبور حتى لا تعرض نفسك للغرامه .",
+        "العبور بالقوة أو فى مجموعات من بوابات التذاكر.",
+        "الجرى أو الجلوس أو اللعب أثناء الصعود أو النزول على السلالم المتحركة.",
+        "السماح للأطفال بالصعود أو النزول على السلالم المتحركة.",
+        "التدافع أو اللعب أو الجرى على رصيف القطار.",
+        "النزول على القضبان لإلتقاط الممتلكات التى تسقط فى مسار القطار ، توجه فوراً لمسئولى المحطة للمساعدة.",
+        "فتح أو غلق باب القطار بيدك .",
+        "ركوب القطار بعد بدء صفارة إنذار إغلاق الباب .",
+        "الجلوس على أرضية القطار ."
+      ]
+    }
+  },
+  "violations-fines": {
+    "title": "المخالفات و الغرامات",
+    "30": {
+      "who-collected-fines": "غرامة شرطة تحصل بمعرفة افراد شرطة المترو",
+      "violations": [
+        "التدخين داخل عربات المترو و المحطات",
+        "ركوب العربات المخصصه للسيدات",
+        "إلقاء المخلفات بداخل المحطات والقطارات"
+      ]
+    },
+    "50": {
+      "who-collected-fines": "غرامة ركاب تحصل بمعرفة افراد شركة المترو مشرفين ومفاجئين",
+      "violations": [
+        "السفر بدون تذكرة.",
+        "عدم استخدام التذكرة اثناء الدخول من البوابات.",
+        "استخدام تذكرة سبق استخدامها.",
+        "السفر بتذكرة بتخفيض لا يستحقه.",
+        " تجاوز المنطقة المحددة بالاشتراك."
+      ]
+    },
+    "100": {
+      "who-collected-fines": "غرامة شرطة تحصل بمعرفة افراد شرطة المترو",
+      "violations": [
+        "مزاولة البيع بالمحطات والقطارات بدون تصريح.",
+        "التسول بالمحطات والقطارات.",
+        "القيام بلصق اعلانات او ملصقات بالمحطات والقطارات بدون تصريح.",
+        "عبور شريط سكة المترو.",
+        "اساءة استعمال والعبث بأدوات ومعدات والاجهزة الخاصة بالمحطات والقطارات.",
+        "استخدام آى آلات او معدات في غير المخصص لها.",
+        "إعاقة غلق أبواب القطارات"
+      ]
+    },
+    "fine-delaying-trains": {
+      "title":"غرامة تأخير القطارات",
+      "violations": [
+        "غرامة تأخير القطار نتيجة مخالفة أحد الركاب بمبلغ 300 جنيه للدقيقة الواحدة؛ حيث تعتبر هذه الغرامة كوسيلة لردع الراكب المخالف ولعدم تكرار المخالفة التي تؤدى الى تأخير القطارات.",
+        "غرامة تأخير القطار نتيجة مخالفة أحد الشركات بمبلغ 400 جنيه للدقيقة الواحدة؛ بالإضافة الي قيمة الأضرار الناتجة عن تأخير القطارات."
+      ]
+    },
+    "notes": [
+      "وذلك حتى لا تتعرض للغرامة المقررة لكل بند",
+      "لمترو مشروع حضارى ملك لك فحافظ عليه"
+    ]
   }
 }
