translate get started screen

--- a/apps/fast-metro/app/src/data/langs/ar.json
+++ b/apps/fast-metro/app/src/data/langs/ar.json
@@ -133,10 +133,11 @@
       }
     }
   },
-  "get-started": {
-    "slide-one": "{{content}}",
-    "slide-two": "{{content}}",
-    "slide-three": "{{content}}"
+  "get-started-screen": {
+    "slide-1": "هذا النص هو نص بديل لوصف ميزة مهمة موجودة في التطبيق.",
+    "slide-2": "هذا النص هو نص بديل لوصف ميزة مهمة موجودة في التطبيق.",
+    "slide-3": "هذا النص هو نص بديل لوصف ميزة مهمة موجودة في التطبيق.",
+    "finish-button": "أبدأ الآن"
   },
   "closet-transit": {
     "title": "اقرب محطة تبادلية",
@@ -197,18 +198,18 @@
       "subtitle": "ما الذي يجب فعله في المترو",
       "content": [
         "إتباع اللوحات الإرشادية والإهتمام بسماع إشعارات وتنبيهات الإذاعة الداخليه.",
-         "مراعاة ومساعدة كبارالسن والنساء والأطفال وذوى الإحتياجات الخاصه (السماح لهم بالمرور أولاً من بوابات التذاكر والسلالم المتحركه والمصاعد وركوب القطار وإعطاء الأولويه لهم بالجلوس ).",
-         "الحفاظ على نظافه المحطات والقطارات وإلقاء المهملات بصناديق القمامه.",
-         "فى حالة الإشتباه فى أى شئ مريب بالمحطه أو القطار يرجى التوجه إلى المسؤلين",
-         "إبلاغ مسئول المحطة عن أى ملاحظات سواء بالمحطه أو القطار.",
-         "إستخدام معدات السلامة والطوارئ ( طفايات الحريق أو بلوف الطوارئ بالقطار) فقط فى الحالات الطارئة حتى لا تتعرض للمسائلة القانونية .",
-         "إستخدم التذكرة أو الكارت الذكى للعبور من بوابات التذاكر.",
-         "اللجوء لمسئول بوابات التذاكر عند حدوث خلل فى وسيلة العبور .",
-         "عند إستخدام السلالم المتحركه يرجى إمساك الدرابزين والوقوف على السلم فى إتجاه الصعود أو النزول .",
-         "عند إنتظار القطار على الرصيف يرجى الوقوف خلف الخط الأصفر .",
-         "السماح للركاب بالنزول أولاً من القطارثم الصعود .",
-         "الإبتعاد عن الأبواب بعد الصعود للقطار."
-         ]
+        "مراعاة ومساعدة كبارالسن والنساء والأطفال وذوى الإحتياجات الخاصه (السماح لهم بالمرور أولاً من بوابات التذاكر والسلالم المتحركه والمصاعد وركوب القطار وإعطاء الأولويه لهم بالجلوس ).",
+        "الحفاظ على نظافه المحطات والقطارات وإلقاء المهملات بصناديق القمامه.",
+        "فى حالة الإشتباه فى أى شئ مريب بالمحطه أو القطار يرجى التوجه إلى المسؤلين",
+        "إبلاغ مسئول المحطة عن أى ملاحظات سواء بالمحطه أو القطار.",
+        "إستخدام معدات السلامة والطوارئ ( طفايات الحريق أو بلوف الطوارئ بالقطار) فقط فى الحالات الطارئة حتى لا تتعرض للمسائلة القانونية .",
+        "إستخدم التذكرة أو الكارت الذكى للعبور من بوابات التذاكر.",
+        "اللجوء لمسئول بوابات التذاكر عند حدوث خلل فى وسيلة العبور .",
+        "عند إستخدام السلالم المتحركه يرجى إمساك الدرابزين والوقوف على السلم فى إتجاه الصعود أو النزول .",
+        "عند إنتظار القطار على الرصيف يرجى الوقوف خلف الخط الأصفر .",
+        "السماح للركاب بالنزول أولاً من القطارثم الصعود .",
+        "الإبتعاد عن الأبواب بعد الصعود للقطار."
+      ]
     },
     "dont": {
       "title": "Don't",
@@ -263,7 +264,7 @@
       ]
     },
     "fine-delaying-trains": {
-      "title":"غرامة تأخير القطارات",
+      "title": "غرامة تأخير القطارات",
       "violations": [
         "غرامة تأخير القطار نتيجة مخالفة أحد الركاب بمبلغ 300 جنيه للدقيقة الواحدة؛ حيث تعتبر هذه الغرامة كوسيلة لردع الراكب المخالف ولعدم تكرار المخالفة التي تؤدى الى تأخير القطارات.",
         "غرامة تأخير القطار نتيجة مخالفة أحد الشركات بمبلغ 400 جنيه للدقيقة الواحدة؛ بالإضافة الي قيمة الأضرار الناتجة عن تأخير القطارات."
